--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div> 
     <div style="text-align:center">
         <h1> <p>
-                <b class="style-1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HAJIN's portfolio</b>
+                <class="style-1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HAJIN's portfolio
         </p> </h1>
     </div>
 </div>
